[project]
name = "epo-tools"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12"
readme = "readme.md"
license = { text = "MIT" }
dependencies = [
    "marimo==0.13.9",
    "altair (>=5.5.0,<6.0.0)",
    "vegafusion (>=2.0.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlwrapper (>=0.1,<0.2)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "rdflib>=7.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip>=25.0.1,<26.0.0",
    "python-lsp-server>=1.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["epo_tools"]

[tool.marimo.display]
custom_css = ["marimo-custom.css"]
